Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33096

mysys/my_timezone.cc does not compile on AIX

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 11.4
    • 11.4.1
    • Time zones
    • None
    • AIX

    Description

      https://buildbot.mariadb.org/#/builders/121/builds/17046/steps/5/logs/stdio

      /home/buildbot/aix/build/mariadb-11.4.0/mysys/my_timezone.cc: In function 'void my_tzinfo(time_t, my_tz*)':
      /home/buildbot/aix/build/mariadb-11.4.0/mysys/my_timezone.cc:216:76: error: 'struct tm' has no member named 'tm_zone'; did you mean 'tm_mon'?
        216 |   snprintf(tz->abbreviation, sizeof(tz->abbreviation), "%s", tm_local_time.tm_zone);
            |                                                                            ^~~~~~~
            |                                                                            tm_mon
      /home/buildbot/aix/build/mariadb-11.4.0/mysys/my_timezone.cc:217:37: error: 'struct tm' has no member named 'tm_gmtoff'
        217 |   tz->seconds_offset= tm_local_time.tm_gmtoff;
            |                                     ^~~~~~~~~
      

      Caused by:
      MDEV-32189 Use icu for timezones on windows

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              monty Michael Widenius
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0.5d Original Estimate - 0.5d
                  0.5d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d
                  1d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.